--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -12,6 +13,7 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
