--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mikro-orm/core": "^5.1.2",
+    "@mikro-orm/postgresql": "^5.1.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -22,8 +24,6 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
