--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,19 +2,17 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/src/server.js",
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mikro-orm/core": "^5.1.2",
-    "@mikro-orm/postgresql": "^5.1.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -24,6 +22,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
@@ -37,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.26",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "chai": "^4.3.6",
