started register form

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
+    "strictFunctionTypes": false,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
