--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "nodemon src/server.js",
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
