--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
