--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,11 @@
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
-    "cloudinary-react": "^1.7.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
