--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,10 @@
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "18.0.x",
+    "npm": "8.6.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
