--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,6 +32,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "18.0.x",
+    "npm": "8.6.x"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
