--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,7 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/server.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "prestart": "npm run build",
