--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "prestart": "npm run build",
-    "start": "nodemon src/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "engines": {
     "node": "18.0.x",
