--- a/back-end/.env
+++ b/back-end/.env
@@ -4,4 +4,4 @@ NODE_ENV=development
 # Node.js server configuration
 PORT=8080
 
-DATABASE_URL=postgres://@localhost:5432/hyzer-ninja
+DATABASE_URL=postgres://127.0.0.1:5432/hyzer-ninja
